# DMSLite

./: Cargo.toml  doc_buzzword_generator  doc_summarizer  doc_title_generator  psql_cheetsheet.sql  readme.md
src/: llm.rs  main.rs  ocr.rs  psql.rs  settings.rs
