[package]
name = "dmslite"
version = "0.1.0"
edition = "2021"
description = "A tool to search files"
readme = "readme.md"
repository = "https://github.com/lennart-rth/DMSLite"
keywords = ["cli", "Document Management System"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
chrono = "0.4.34"
crossterm = "0.27.0"
futures = "0.3.30"
ids_service = "1.3.7"
ollama-rs = "0.1.7"
postgres-types = "0.2.6"
term_size = "0.3.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
